trunk/Archive2/b3/e64c2f0caf157f/output
main.cpp: In function ‘int main()’:
main.cpp:1:27: error: expected ‘)’ before ‘,’ token
 int main() { if (int x = 3, y = 4) {} }
                           ^
main.cpp:1:22: warning: unused variable ‘x’ [-Wunused-variable]
 int main() { if (int x = 3, y = 4) {} }
                      ^
