trunk/Archive2/b3/e64c2f0caf157f/main.cpp
int main() { if (int x = 3, y = 4) {} }